Fixed gaps to begin media query

--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 }
 body
 {
+    height: 100vh;
+    width: 100vw;
     overflow: hidden;
     /* justify-content: center;
     align-items: center;
@@ -42,7 +44,18 @@ section:before
 } 
 video
 {
+    /* width: 100%;
+    height: auto; */
     object-fit: cover;
+    width: 1276px;
+}
+@media screen and (max-width: 1280px) {
+    div.videobox{
+        display: none;
+    }
+    div.arrow {
+        display: none;
+    }
 }
 /* .page-one video
 {
@@ -53,20 +66,9 @@ video
     width: 100vw;
     left: 0;
     top: 0;
+    z-index: 3;
 } */
-@keyframes videoremoval
-{
-    0%
-    {
-        opacity: 1;
-    }
-    100%
-    {
-        opacity: 0;
-    }
 
-
-}
 h1
 {
     margin: 0;
@@ -168,72 +170,103 @@ h1 span:nth-child(7)
 
 /* NAV BAR
 =========================================================== */
-.wrapper
+/* .wrapper
 {
     width: 1170px;
     height: 100vh;
-}
-header
-{
-    /* background: url(Website/wallpaper.jpg); */
-    height: 100vh;
-    -webkit-background-size: cover;
-    background-size: cover;
-    background-position: center;
-    position: relative;
-}
+} */
 .navbar
-{
-    z-index: 3;
-    float: right;
-    list-style: none;
+{    
     position: absolute;
+    opacity: 1;
+    z-index: 3;
+    width: 100%;
+    text-align: right;
+    float: right;
     top: 0%;
-    left: 65%;
+    left: 0%;
+    overflow: hidden;
 }
 .navbar li a
 {
+    opacity: 1;
     color: whitesmoke;
     text-decoration: none;
+    display: inline-block;
+    /* animation: fadein 1s linear forwards; */
+}
+.navbar li a::before
+{
+    content: "";
+    width: 0px;
+    height: 3px;
+    background: dodgerblue;
+    position: absolute;
+    top: 120%;
+    left: 0%;
+    transition: .5s;
+    mix-blend-mode: multiply;
+}
+.navbar li a::after
+{
+    content: "";
+    width: 0px;
+    height: 3px;
+    background: white;
+    position: absolute;
+    top: 120%;
+    right: 0%;
+    transition: .5s;
+    mix-blend-mode: multiply;
+}
+.navbar li:hover a::before
+{
+    width: 50%;
+    transform: translateX(100%);
+}
+.navbar li:hover a::after
+{
+    width: 50%;
+    transform: translateX(-100%);
 }
 .navbar li
 {
     color: whitesmoke;
-    z-index: 3;
+    /* z-index: 3; */
     text-decoration: none;
     padding: 20px 20px;
     font-family: 'Lato', sans-serif;
     /* font-family: 'Patua One', cursive; */
     font-size: 18px;
-    opacity: 1;
+    opacity: 0;
     display: inline-block;
     animation: fadein 1s linear forwards;
 }
-/* .navbar li:nth-child(1) 
-{
-    animation-delay: 6s;
-}
-.navbar li:nth-child(2)
-{
-    animation-delay: 6.1s;
-}
-.navbar li:nth-child(3)
-{
-    animation-delay: 6.2s;
-}
-.navbar li:nth-child(4)
+ul li:nth-child(1)
 {
     animation-delay: 6.3s;
-} */
+}
+ul li:nth-child(2)
+{
+    animation-delay: 6.4s;
+}
+ul li:nth-child(3)
+{
+    animation-delay: 6.5s;
+}
+ul li:nth-child(4)
+{
+    animation-delay: 6.6s;
+}
 
 .social
 {
     position: absolute;
     top: 60%;
-    left: 10%;
+    left: -35%;
     transform: translateY(-50%);  
     width: 100%;
-    text-align: center;
+    text-align: right;
     z-index: 3;
 }
 .socialbutton
@@ -252,6 +285,7 @@ header
 .socialbutton i
 {
     line-height: 50px;
+    margin-right: 12px;
     font-size: 26px;
     transition: 0.2s linear;
 }
@@ -297,8 +331,9 @@ header
 }
 
 
-/* .social:nth-child(1)
+.social i:nth-child(1)
 {
+    opacity: 1;
     animation-delay: 4.1s;
 }
 .social:nth-child(2)
@@ -308,7 +343,7 @@ header
 .social:nth-child(3)
 {
     animation-delay: 4.3s;
-} */
+}
 
 /* .social a img
 {
@@ -318,11 +353,11 @@ header
     margin: 10px;
     animation: fadeopacity 1s linear forwards;
 } */
-.navbar li a:hover
+/* .navbar li a:hover
 {
     background: whitesmoke;
     color: #333;
-}
+} */
 .logo img
 {
     width: 100px;
@@ -353,7 +388,7 @@ header
     border-right: 2px solid #fff;
     border-bottom: 2px solid #fff;
     animation: arrow 1s linear infinite;
-    animation-delay: arrow 5.5s;
+    /* animation-delay: arrow 5.5s; */
     
     /* animation-delay: 6s ;
     animation: arrow 1s linear infinite; */
@@ -439,7 +474,7 @@ header
     align-items: center;
     justify-content: space-evenly;
     position: relative;
-    top: 15%;
+    top: 5%;
     width: 80%;
     margin: 0 10%;
     z-index: 3;
@@ -470,8 +505,8 @@ header
 {
     top: 10px;
     left: 10px;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
 }
 
@@ -509,7 +544,7 @@ header
 {
     margin: 0;
     padding: 0;
-    color: pink;
+    color: dodgerblue;
     font-size:  24px;
 }
 .testcontainer {
